feat: get nearby restaurant names